# snake

./: snake.c  snake1.c  snake4.c
pthreadsnakes/snacurse-0.1/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  TODO  configure  configure.ac
pthreadsnakes/snacurse-0.1/doc/: Makefile.am  Makefile.in
pthreadsnakes/snacurse-0.1/src/: Makefile.am  Makefile.in  ai.c  ai.h  article.c  article.h  draw.c  draw.h  mymenu.c  mymenu.h  snacurse.c  snacurse.h  snake.c  snake.h  wrapper.c  wrapper.h
